# wavekit-mcp

./: README.md  pyproject.toml  wavekit_mcp.toml.example
.claude/skills/: wavekit.md
.github/workflows/: publish.yml
src/wavekit_mcp/: __init__.py  config.py  serializer.py  server.py  session.py  worker.py
