[tool.poetry]
name = "wavekit-mcp"
version = "0.2.2"
description = "MCP server for AI-driven waveform analysis via wavekit"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = ">=2.0"
wavekit = ">=0.5.2"
numpy = "*"
RestrictedPython = ">=7.0"
plotly = ">=5.0"
kaleido = ">=0.2"

[tool.poetry.scripts]
wavekit-mcp = "wavekit_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
